--- a/basket-page/basket.html
+++ b/basket-page/basket.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basket</title>
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
-    
+    <h1>niag</h1>
 </body>
 </html>
