--- a/shop-page/shop.html
+++ b/shop-page/shop.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../main.css">
 </head>
 <body>
-    
+    <section class="shopping">
+        <div class="shopping-wrapper">
+            <div class="shopping-list">
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
