--- a/wishlist-page/wishlist.html
+++ b/wishlist-page/wishlist.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
+    <link rel="shortcut icon" href="/home-page/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="/wishlist-page/wishlist.css">
+    <link rel="stylesheet" href="/fontawesome-free-5.15.4-web/css/all.min.css">
 </head>
+
 <body>
-    
+
+    <section class="wishlist">
+        <div class="container">
+            <h1 class="title">My wishlist </h1>
+            <table   class="wishlist-wrapper">
+                <thead>
+                    <th>product</th>
+                    <th>price</th>
+                    <th>stock status</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="td-img">
+                            <img src="/wishlist-page/img/bulgar.png" alt="">
+                            <p>green capsicum</p>
+                        </td>
+                        <td>$14.99 <span>-26.00$</span></td>
+                        <td>
+                            <div>in stock</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-img">
+                            <img src="/wishlist-page/img/bulgar.png" alt="">
+                            <p>green capsicum</p>
+                        </td>
+                        <td>$14.99 <span>-26.00$</span></td>
+                        <td>
+                            <div>in stock</div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
 </body>
+
 </html>
