--- a/checkout-page/checkout.html
+++ b/checkout-page/checkout.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <link rel="shortcut icon" href="/home-page/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="/checkout-page/checkout.css">
+    <link rel="stylesheet" href="/fontawesome-free-5.15.4-web/css/all.min.css">
 </head>
 <body>
-    
+      
 </body>
-</html>
+</html> 
+
