--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="shortcut icon" href="/home-page/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/home-page/home.css">
     <link rel="stylesheet" href="/fontawesome-free-5.15.4-web/css/all.min.css">
 </head>
-
 <body>
-
     <section class="products-wrapper">
         <div class="container">
             <div class="items-list">
